fix: styled overflow aside in board panel

--- a/client/src/Pages/Board/BoardAside/BoardAside.scss
+++ b/client/src/Pages/Board/BoardAside/BoardAside.scss
@@ -1,4 +1,7 @@
 .workspace-panel {
+  height: 100%;
+  overflow-y: auto;
+
   &__header {
     margin: 0 0 10px 0;
     padding: 0 0 10px 0;
@@ -13,7 +16,6 @@
   }
   &__boards {
     max-height: 70vh;
-    overflow-y: scroll;
   }
   .boards__board--button {
     display: none;
